syntax = "proto3";

package shrine_discovery;

service ShrineDiscoveryService {
  rpc RecommendShrine(RecommendShrineRequest) returns (RecommendShrineResponse);
  rpc GetNearbyShrine(GetNearbyShrineRequest) returns (ShrinesListResponse);
  rpc SearchShrinesByCategory(SearchByCategoryRequest) returns (ShrinesListResponse);
  rpc SearchShrines(SearchShrinesRequest) returns (SearchShrinesResponse);
  rpc RecommendShrines(RecommendShrinesRequest) returns (RecommendShrinesResponse);
  rpc GetShrineAggregatedStats(GetShrineAggregatedStatsRequest) returns (ShrineAggregatedStatsResponse);
}

// Request messages
message RecommendShrineRequest {
  string user_id = 1;
  string wish_text = 2;
  string wish_category = 3; // love, career, wealth, health, etc.
  optional double latitude = 4;
  optional double longitude = 5;
  optional int32 max_distance_km = 6; // default 10km
}

message GetNearbyShrineRequest {
  string location = 1;
  optional int32 radius_km = 2; // default 10km
  optional string sort_by = 3; // popularity, rating, distance
}

message SearchByCategoryRequest {
  string category = 1; // love, career, wealth, health
  optional double latitude = 2;
  optional double longitude = 3;
}

// Response messages
message ShrineRecommendation {
  string shrine_id = 1;
  string shrine_name = 2;
  string description = 3;
  string location = 4;
  double rating = 5;
  double distance_km = 6;
  string durationText = 7;
  string category = 8;
  double match_score = 9; // 0-100 how well it matches the wish
  string reason = 10; // why this shrine was recommended
}

message RecommendShrineResponse {
  repeated ShrineRecommendation recommendations = 1;
  string categorized_wish = 2; // AI-categorized wish type
}

message ShrinesListResponse {
  repeated ShrineRecommendation shrines = 1;
}

// New search and recommend messages
message SearchShrinesRequest {
  optional string query = 1;
  repeated string category = 2;
  optional string shrineType = 3;
  optional double latitude = 4;
  optional double longitude = 5;
  optional double maxDistance = 6;
  optional double minRating = 7;
  optional string sortBy = 8;
  optional string sortOrder = 9;
  optional int32 page = 10;
  optional int32 limit = 11;
}

message ShrineItem {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated string category = 4;
  string shrineType = 5;
  double latitude = 6;
  double longitude = 7;
  optional double distance = 8;
  double averageRating = 9;
  int32 totalReviews = 10;
  int32 totalWishes = 11;
  optional string photoUrl = 12;
}

message SearchShrinesResponse {
  repeated ShrineItem shrines = 1;
  int32 total = 2;
  int32 page = 3;
  int32 totalPages = 4;
}

message RecommendShrinesRequest {
  string userId = 1;
  string category = 2;
  optional double latitude = 3;
  optional double longitude = 4;
  optional double maxDistance = 5;
  optional int32 limit = 6;
}

message RecommendationItem {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated string category = 4;
  int32 matchScore = 5;
  double averageRating = 6;
  int32 totalReviews = 7;
  int32 totalWishes = 8;
  optional double distance = 9;
  string reason = 10;
}

message RecommendShrinesResponse {
  repeated RecommendationItem recommendations = 1;
}

message GetShrineAggregatedStatsRequest {
  string shrineId = 1;
}

message CategoryCount {
  string category = 1;
  int32 count = 2;
}

message RatingDistribution {
  int32 five = 1;
  int32 four = 2;
  int32 three = 3;
  int32 two = 4;
  int32 one = 5;
}

message ShrineAggregatedStatsResponse {
  string id = 1;
  double averageRating = 2;
  int32 totalReviews = 3;
  RatingDistribution ratingDistribution = 4;
  int32 totalWishes = 5;
  int32 recentWishesCount = 6;
  repeated CategoryCount popularCategories = 7;
}

message Empty {}

